--- a/CoollEventsWebApp/CoollEventsWebApp/CoollEventsWebApp.csproj
+++ b/CoollEventsWebApp/CoollEventsWebApp/CoollEventsWebApp.csproj
@@ -107,6 +107,8 @@
     <Content Include="Resources\css\style.css" />
     <Content Include="Resources\css\_login.css" />
     <Content Include="Resources\css\_registrar.css" />
+    <Content Include="Resources\css\_trocaravatar.css" />
+    <Content Include="Resources\css\_trocarsenha.css" />
     <Content Include="Resources\font\fontawesome-webfont.svg" />
     <Content Include="Resources\img\alerticon.png" />
     <Content Include="Resources\img\bg\bg-1.jpg" />
@@ -172,14 +174,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\AtualizarAvatarController.cs" />
     <Compile Include="Controllers\EditarController.cs" />
     <Compile Include="Controllers\EntrarController.cs" />
     <Compile Include="Controllers\ErroController.cs" />
     <Compile Include="Controllers\IndexController.cs" />
+    <Compile Include="Controllers\LogoutController.cs" />
     <Compile Include="Controllers\ManutencaoController.cs" />
     <Compile Include="Controllers\PerfilController.cs" />
     <Compile Include="Controllers\registrarController.cs" />
     <Compile Include="Controllers\SobreController.cs" />
+    <Compile Include="Controllers\TrocarSenhaController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -206,6 +211,8 @@
     <Content Include="Views\Erro\Index.cshtml" />
     <Content Include="Views\Perfil\Index.cshtml" />
     <Content Include="Views\Editar\Index.cshtml" />
+    <Content Include="Views\TrocarSenha\Index.cshtml" />
+    <Content Include="Views\AtualizarAvatar\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -215,6 +222,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\Logout\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
