--- a/CoollEventsWebApp/CoollEventsWebApp/bin/CoollEventsWebApp.dll.config
+++ b/CoollEventsWebApp/CoollEventsWebApp/bin/CoollEventsWebApp.dll.config
@@ -9,7 +9,10 @@
     <add key="webpages:Enabled" value="false"/>
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
-    <add key="userImagens" value="C:\ImageProvider\public\userImagens"/>
+    <add key="userImagens" value="C:ImageProvider/public/userImagens"/>
+    <add key="enqueteLogo" value="C:ImageProvider/public/enqueteLogo"/>
+    <add key="eventoBackground" value="C:ImageProvider/public/eventoBackground"/>
+    <add key="eventoLogo" value="C:ImageProvider/public/eventoLogo"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2"/>
